<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical"
    android:background="@drawable/gradient_background">

    <TextView
        style="@style/Base.TextAppearance.AppCompat.Large.Inverse"
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:text="@string/title1"
        android:textColor="@color/colorAccent"
        android:textAlignment="center" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_marginTop="5dp"
        android:layout_width="170dp"
        android:layout_height="170dp"
        android:layout_gravity="center"
        android:background="@drawable/viewboard"
        android:scaleType="fitXY"/>

    <Button
        android:id="@+id/camera"
        android:layout_width="190dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/capture_button"
        android:layout_marginTop="5dp"
        android:textColor="@android:color/white"
        android:background="@drawable/login_button"/>

    <android.support.v4.widget.NestedScrollView
        android:id="@+id/design_bottom_sheet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/gradient_bottom_background"
            android:orientation="vertical">

            <TextView
                android:id="@+id/ctype"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="3dp"
                android:layout_marginTop="3dp"
                android:text="@string/complaint_text"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/spinner1"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/complaint_arrays"
                android:overlapAnchor="false"
                android:prompt="@string/complaint_type" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.2"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/timelabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="3dp"
                    android:text="@string/show_time"
                    android:textStyle="bold" />

                <TextClock
                    android:id="@+id/time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="3dp"
                    android:format12Hour="hh:mm:ss a"
                    android:textSize="15sp" />

            </LinearLayout>

            <EditText
                android:id="@+id/complaintdesc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@drawable/complaint"
                android:hint="@string/complaint_desc_hint"
                android:inputType="textMultiLine"
                android:scrollbars="vertical" />

            <Button
                android:id="@+id/button"
                android:layout_width="190dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center|bottom"
                android:layout_marginBottom="10dp"
                android:layout_weight="0.2"
                android:background="@drawable/login_button"
                android:text="@string/upload_button"
                android:textColor="@android:color/white" />

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>


</LinearLayout>
